--- a/app/src/main/res/layout/layout_test.xml
+++ b/app/src/main/res/layout/layout_test.xml
@@ -8,7 +8,7 @@
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:text="@string/test_description"
-    android:textColor="@android:color/black"
+    android:textColor="@color/black"
     android:lineSpacingExtra="10dp"
     android:textIsSelectable="true"
     android:textSize="24sp"
